# patient-triage-and-recommendation

./: .env.example  .gitignore  LICENSE  PDM_COMMANDS.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml
agents/: CLAUDE.md
backend/: Dockerfile  README.md  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20251127_1710_8db3bbe44326_phase_1_initial_schemas.py
backend/scripts/: init_db.py
backend/src/: container.py  main.py
backend/src/app/: main.py
backend/src/app/infrastructure/database/: base.py
backend/src/app/infrastructure/database/models/: __init__.py  appointment.py  patient.py  provider.py  user.py
backend/src/infrastructure/api/: appointment.py  auth.py  patient.py  provider.py  user.py  utils.py
backend/src/infrastructure/database/: base.py
backend/src/infrastructure/database/models/: __init__.py  appointment.py  patient.py  provider.py  user.py
backend/src/infrastructure/database/schemas/: __init__.py  appointment.py  auth.py  patient.py  provider.py  user.py
backend/src/infrastructure/repo/: __init__.py  appointment.py  base.py  patient.py  provider.py  user.py
backend/src/presentation/: __init__.py
backend/src/presentation/api/: __init__.py
backend/src/presentation/api/public/: __init__.py
backend/src/presentation/api/public/v1/: __init__.py  health.py
backend/src/services/: __init__.py  appointment.py  auth.py  errors.py  patient.py  provider.py  user.py
backend/tests/: conftest.py
backend/tests/unit/api/: test_appointment.py  test_auth.py  test_patient.py  test_provider.py  test_user.py
backend/tests/unit/models/: test_appointment.py  test_patient.py  test_provider.py  test_user.py
backend/tests/unit/repositories/: test_appointment.py  test_patient.py  test_provider.py  test_user.py
backend/tests/unit/schemas/: __init__.py  test_appointment.py  test_auth.py  test_patient.py  test_provider.py  test_user.py
backend/tests/unit/services/: test_appointment.py  test_auth.py  test_patient.py  test_provider.py
deploy/: README.md
deploy/docker/: backend.Dockerfile  frontend.Dockerfile
deploy/terraform/aws/: main.tf  variables.tf
deploy/terraform/gcp/: main.tf  outputs.tf  variables.tf
docs/: README.md
docs/architecture/: clean-architecture.md
docs/decisions/: ADR-001-postgresql.md  ADR-002-dishka-di.md  ADR-005-nlm-api.md
frontend/: Dockerfile  README.md  app.py
frontend/pages/: 2_👤_Profile.py  appointments.py  dashboard.py  profile.py
frontend/shared/: api_client.py  auth.py
scripts/: setup.sh
